<resources>
    <string name="app_name">SapiDiner</string>
    <string name="loginTitle">Bejelentkezés</string>
    <string name="rememberMe">"Emlékezz rám"</string>
    <string name="userEmail">Email</string>
    <string name="password">Jelszó</string>
    <string name="phoneNumber">Telefonszám</string>
    <string name="firstName">Vezetéknév</string>
    <string name="lastName">Keresztnév</string>
    <string name="editText_useremail">Email</string>
    <string name="editText_password">Jelszó</string>
    <string name="registrationTitle">Regisztráció</string>
    <string name="verifyPhoneNumber">"Ellenőrző kód megadása:</string>
    <string name="send">"Küldés"</string>
    <string name="cancel">"Mégse"</string>
    <string name="nameInputError">"A mező kitöltése kötelező"</string>
    <string name="phoneInputError">"A megadott telefonszám nem érvényes"</string>
    <string name="validationCodeError">"Helytelen ellenőrző kód"</string>
    <string name="registrationError">"Ezzel a telefonszámmal már regisztráltak"</string>
    <string name="regNameError">"A név mező kitöltése kötelező"</string>
    <string name="regEmailError">"Az email mező kitöltése kötelező"</string>
    <string name="loginError">"Érvénytelen felhasználónév vagy jelszó"</string>
    <string name="setMenu">Étlap szerkesztése</string>
    <string name="viewMenu">Étlap</string>
    <string name="addFood">Étel hozzáadása</string>
    <string name="foodName">Étel neve</string>
    <string name="addFoodPhoto">Kép hozzáadása</string>
    <string name="gallery">Galéria</string>
    <string name="camera">Kamera</string>
    <string name="foodCategories">"Kategóriák"</string>
    <string name="chooseCategory">"Válassz kategóriát!"</string>
    <string name="incorrectCategory">"Nem megfelelő kategória!"</string>
    <string name="photoError">"Kép feltöltése kötelező!"</string>
    <string name="foodList">Ételek</string>
    <string name="loading">Betöltés…</string>
    <string name="deleteFood">Ételek törlése</string>
    <string name="menu">Étlap</string>
    <string name="foodPrice">Ár</string>
    <string name="orderList">Rendelések</string>
    <string name="emptyCart">Jelenleg nincsen megjeleníthető rendelés!</string>
    <string name = "buttonGoBack">VISSZA</string>
    <string name = "missingInfo">Az összes mező kitöltése kötelező</string>
    <string name = "invalidEmail">Érvénytelen email cím</string>
    <string name = "invalidPassword">A jelszónak legalább 6 karakterből kell állnia</string>
    <string name = "regFailed">Sikertelen regisztráció</string>
    <string name="orderFinished">A rendelés elkészült!</string>
    <string name="emptyOrderError">"Üres rendelés nem küldhető!"</string>
    <string name="selectPicture">"Kép kiválasztása"</string>
    <string name="errorText">"Hiba történt, próbálja újra!</string>
    <string name="logOut">Kijelentkezés</string>
    <string name="orderSuccessful">"Rendelés elküldve!"</string>
</resources>
