<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.OrderFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Fragments.SetMenuFragment">


        <TextView
            android:id="@+id/setMenuTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setMenu"
            android:layout_alignParentTop="true"
            android:textAlignment="center"
            android:textSize="30sp"
            android:layout_marginTop="60dp"/>

        <Button
            android:id="@+id/addFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/setMenuTitle"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="270dp"
            android:layout_marginLeft="270dp"
            android:layout_marginTop="30dp"
            android:text="@string/addFood" />

        <TextView
            android:id="@+id/foodListTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_below="@id/addFood"
            android:textSize="20sp"
            android:text="@string/foodList"
            android:layout_marginTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/foodList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/foodList"
            android:padding="20dp"/>

        <Button
            android:id="@+id/deleteFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/foodList"
            android:layout_centerHorizontal="true"
            android:text="@string/deleteFood" />

    </RelativeLayout>

</RelativeLayout>